test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/nontoplevel.build
static(var) = defaults(
		example.echo
		Input: abc
	)
